--- a/playbooks/chocolatey-install.yml
+++ b/playbooks/chocolatey-install.yml
@@ -57,6 +57,7 @@
          - synctrayzor
          - thunderbird
          - ungoogled-chromium
+         - veracrypt
          - virtualbox
          - vlc
          - vmware-workstation-player
