--- a/playbooks/chocolatey-install.yml
+++ b/playbooks/chocolatey-install.yml
@@ -51,6 +51,7 @@
          - natron
          - notepadplusplus
          - obs-studio
+         - onlyoffice
          - python
          - sandboxie
          - syncthing
