--- a/playbooks/chocolatey-install.yml
+++ b/playbooks/chocolatey-install.yml
@@ -55,6 +55,7 @@
          - onlyoffice
          - portmaster
          - python
+         - rustdesk
          - sandboxie
          - syncthing
          - syncthing-gtk
