--- a/playbooks/chocolatey-uninstall-UNTESTED.yml
+++ b/playbooks/chocolatey-uninstall-UNTESTED.yml
@@ -8,7 +8,8 @@
      - name: Uninstall Chocolatey Program
        win_chocolatey:
         name:
-         - 
+         - ferdi
+         - hamsket-nightly
         state: absent
        register: uninstall_results
      - name: Chocolatey Uninstallation Results
