--- a/playbooks/scoop-install-UNTESTED.yml
+++ b/playbooks/scoop-install-UNTESTED.yml
@@ -1,6 +1,12 @@
 ---
  - name: Install Packages using Scoop
    community.windows.win_scoop:
+    gather_facts: true
+    hosts: windows
     name: 
      - standardnotes
     global: true
+   register: scoop_install_results
+ - name: Install Packages using Scoop Results
+   debug:
+     msg: "{{ scoop_install_results }}"
